--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,15 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		Social Media Dashboard Total Followers: 23,004 Dark Mode @nathanf 1987
+		Followers 12 Today @nathanf 1044 Followers 99 Today @realnathanf 11k
+		Followers 1099 Today Nathan F. 8239 Subscribers 144 Today Overview -
+		Today Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile Views 52k
+		1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total Views 1407
+		12%
 	</main>
 </Layout>
 
